--- a/index.html
+++ b/index.html
@@ -24,20 +24,24 @@
     <div class="navbar">
         <div class="navbar__s1">
             <h1 class="navbar__s1__title">Udemy</h1>
-
         </div>
         <div class="navbar__s2">
             <i class="fa-solid fa-magnifying-glass"></i>
             <input placeholder="Search for anything here. Tech, Business, Arts">
-
         </div>
         <div class="navbar__s3">
             <p>Courses</p>
-            <p>My learning</p>
+            <!-- <p>My learning</p> -->
+             <div class="mylearning">
+                <p>My learning</p>
+                <div class="mylearning__popup">
+                <p>you did not purchase anything yet</p>
+             </div>
+             </div>
+             
             <i class="fa-solid fa-cart-shopping"></i>
             <i class="fa-solid fa-bell"></i>
             <i class="fa-solid fa-user"></i>
-
         </div>
 
     </div>
@@ -53,6 +57,11 @@
     <!-- sale-image -->
     <div class="sale-image">
         <img src="./images/sale-image.jpg" alt="">
+        <div class="sale-image-offer">
+            <h2>Udemy Flash Sale! 24 hours to save.</h2>
+            <p>Get the top courses for 499.Just one day to 
+                save but lifetime to learn</p>
+        </div>
     </div>
     <!-- recommended  -->
     <div class="recommended">
@@ -141,6 +150,10 @@
                 <p>4.9 ⭐⭐⭐⭐</p>
                 <p>449 <del>1999</del></p>
             </div>
+        </div>
+    </div>
+    <div class="popular-section">
+        <div class="popular__container">
             <div class="course__card">
                 <img src="./images/m-s5.jpg">
                 <h3>2025 Python Data Visaulisation Masterclass </h3>
